Closed Bug 1613106 Opened 6 years ago Closed 6 years ago

Crash in [@ mozilla::ClientWebGLContext::InitializeCanvasRenderer]

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

Unspecified
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla74
Tracking Status
firefox-esr68 --- unaffected
firefox72 --- unaffected
firefox73 --- unaffected
firefox74 --- fixed

People

(Reporter: pascalc, Assigned: jgilbert)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-e9946e1b-1e2b-4ab1-8c94-679bb0200130.

Top 10 frames of crashing thread:

0 xul.dll mozilla::ClientWebGLContext::InitializeCanvasRenderer dom/canvas/ClientWebGLContext.cpp:560
1 xul.dll mozilla::ClientWebGLContext::GetCanvasLayer dom/canvas/ClientWebGLContext.cpp:489
2 xul.dll mozilla::dom::HTMLCanvasElement::GetCanvasLayer dom/html/HTMLCanvasElement.cpp:1098
3 xul.dll nsHTMLCanvasFrame::BuildLayer layout/generic/nsHTMLCanvasFrame.cpp:448
4 xul.dll nsDisplayCanvas::BuildLayer layout/generic/nsHTMLCanvasFrame.cpp:108
5 xul.dll mozilla::ContainerState::ProcessDisplayItems layout/painting/FrameLayerBuilder.cpp:4892
6 xul.dll mozilla::FrameLayerBuilder::BuildContainerLayerFor layout/painting/FrameLayerBuilder.cpp:6335
7 xul.dll nsDisplayList::BuildLayers layout/painting/nsDisplayList.cpp:2903
8 xul.dll nsDisplayList::PaintRoot layout/painting/nsDisplayList.cpp:3117
9 xul.dll static nsLayoutUtils::PaintFrame layout/base/nsLayoutUtils.cpp:4132

This is a new signature that started appearing on nightly with build 20200127093737 (https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=3222cd65ae42e085f1b0d3c56f6d77f6596ab949&tochange=c0fa6d007c58437398cc06a97d221c42d41dcf9e) This is low volume and I am not seeing in this changelog a webgl related patch.

Priority: -- → P1

The call to InitializeCanvasRenderer earlier in the function can lose
the context.

Assignee: nobody → jgilbert
Status: NEW → ASSIGNED
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/672af4a66788 Add missing context loss check. r=lsalzman
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: