Bug 1613106 - Add missing context loss check. r=lsalzman

The call to InitializeCanvasRenderer earlier in the function can lose
the context.

Differential Revision: https://phabricator.services.mozilla.com/D62100

--HG--
extra : moz-landing-system : lando